--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 .header {
   display: flex;
   justify-content: space-between;
+  border-bottom: solid;
 }
 
 .body {
@@ -22,13 +23,15 @@
   background-image: ;
 }
 
-.container {
+.container,
+.finish {
   width: 750px;
   max-width: 80%;
   background-color: beige;
   border-radius: 5px;
   box-shadow: 0 0 15px 2px;
   padding: 10px;
+  text-align: center;
 }
 
 .answers {
@@ -49,17 +52,24 @@
   border-color: beige;
 }
 
-.start,
-.next {
+.start {
   font-size: 1.5rem;
   font-weight: bold;
   padding: 10px 20px;
 }
 
-.quizControls {
+.strQuiz {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.finHead {
+  display: flex;
+  justify-content: center;
+  margin: 10px;
+  font-size: 30px;
+  border-bottom: solid;
 }
 
 .hide {
