--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: space-between;
   border-bottom: solid;
+  font-size: 35px;
 }
 
 .body {
@@ -20,7 +21,8 @@
   height: 100vh;
   justify-content: center;
   align-items: center;
-  background-image: ;
+  background: linear-gradient(rgba(74, 170, 165, 0.5), rgba(74, 170, 165, 0.5)),
+    url("./mario-bkgd.png");
 }
 
 .container,
@@ -34,6 +36,10 @@
   text-align: center;
 }
 
+.text {
+  font-size: 25px;
+}
+
 .answers {
   display: grid;
   grid-template-columns: repeat(2, auto);
@@ -44,6 +50,7 @@
 .btn {
   border: 1px solid;
   border-radius: 5px;
+  font-size: 25px;
   padding: 5px 10px;
   outline: none;
 }
@@ -70,15 +77,6 @@
   margin: 10px;
   font-size: 30px;
   border-bottom: solid;
-}
-
-.button-correct {
-  background-color: green;
-  text: white;
-}
-
-.button-incorrect {
-  color: red;
 }
 
 .hide {
